--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,12 @@
 {
   "public": {
 
-    "title": "TinoIQ",
-    "tagline":"Stock Prediction Analyses",
+    "title": "Tino Forum",
+    "tagline":"Tino IQ Forum",
 
-    "logoUrl": "http://placekitten.com/250/80",
-    "logoHeight": "80",
-    "logoWidth": "250",
+    "logoUrl": "http://tinoiq.com/wp-content/uploads/2016/06/cropped-Mac-Icon-512@2x-1.png",
+    "logoHeight": "30",
+    "logoWidth": "30",
     "faviconUrl": "/favicon.ico",
 
     "locale": "en",
